fix line spacing collision in dateline on mobile

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -139,6 +139,11 @@ body > header {
       font-size: 1.1rem;
       margin-top: -.5rem;
     }
+    &::first-line {
+      @include respond-to(small){
+        line-height: 1.72;
+      }
+    }
     @include respond-to(medium){
       font-size: 1.2rem;
       margin-top: -.75rem;
